Improve handling of hg data in tests
Merurial uses a weird mixture of line endings which is hard to
get right when patching the commits and working on different
platforms. This commit (and an accompanying commit that cleans up
the test data itself) will change the way we handle the test data:
we only store those files that are not in hg, plus the `.hg`
subdirectory itself. When running the tests, we copy the test data
directory, but now also checkout the tip of the hg repo.

--- a/src/LfMerge.Core.Tests/LfMerge.Core.Tests.csproj
+++ b/src/LfMerge.Core.Tests/LfMerge.Core.Tests.csproj
@@ -93,6 +93,9 @@
       <HintPath>..\..\packages\ini-parser.2.5.2\lib\net20\INIFileParser.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="LibChorus, Version=2.6.365.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\lib\LibChorus.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.DotNet.PlatformAbstractions, Version=2.0.4.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
       <HintPath>..\..\packages\Microsoft.DotNet.PlatformAbstractions.2.0.4\lib\net45\Microsoft.DotNet.PlatformAbstractions.dll</HintPath>
       <Private>True</Private>
